hphp/test/zend/good/tests/classes/protected_002.php.expectf
Call pass::show()
Call fail::show()

Fatal error: Call to protected method pass::show() from context 'fail' in %s/protected_002.php on line 16
